made first round of edits...fixed wrapping footer

--- a/dev/gwn/css/main.css
+++ b/dev/gwn/css/main.css
@@ -114,7 +114,7 @@ ul#horizontal-nav {
   color: #cccdce;
 }
 ul#horizontal-nav li {
-  display: inline;
+  display: inline-block;
   white-space:nowrap;
   padding-right: 30px;
 }
